--- a/SHOP/public/cart.html
+++ b/SHOP/public/cart.html
@@ -7,12 +7,14 @@
 </head>
 <body>
 <header class="container header">
-<h1>Your Cart</h1>
-<nav>
-<a href="index.html">Store</a>
-<a href="cart.html" class="active">Cart (<span id="cart-count">0</span>)</a>
-</nav>
+  <h1>Your Cart</h1>
+  <nav>
+    <button id="theme-toggle" class="btn ghost" aria-label="Toggle theme">🔍</button>
+    <a href="index.html">Store</a>
+    <a href="cart.html" class="active">Cart (<span id="cart-count">0</span>)</a>
+  </nav>
 </header>
+
 
 
 <main class="container">
@@ -34,5 +36,8 @@
 
 <script src="assets/js/products.js"></script>
 <script src="assets/js/cart.js"></script>
+
+<div id="toast-wrap" aria-live="polite" aria-atomic="true"></div>
+
 </body>
 </html>
