--- a/SHOP/public/index.html
+++ b/SHOP/public/index.html
@@ -7,12 +7,15 @@
 </head>
 <body>
 <header class="container header">
-<h1>Campus Shop</h1>
-<nav>
-<a href="index.html" class="active">Store</a>
-<a href="cart.html">Cart (<span id="cart-count">0</span>)</a>
-</nav>
+  <h1>Campus Shop</h1>
+  <nav>
+    <input id="search" class="search" type="search" placeholder="Search products…" aria-label="Search products">
+    <button id="theme-toggle" class="btn ghost" aria-label="Toggle theme">🔍</button>
+    <a href="index.html" class="active">Store</a>
+    <a href="cart.html">Cart (<span id="cart-count">0</span>)</a>
+  </nav>
 </header>
+
 
 
 <main class="container">
@@ -33,5 +36,8 @@
 
 <script src="assets/js/products.js"></script>
 <script src="assets/js/main.js"></script>
+
+<div id="toast-wrap" aria-live="polite" aria-atomic="true"></div>
+
 </body>
 </html>
