--- a/SHOP/public/index.html
+++ b/SHOP/public/index.html
@@ -1,9 +1,10 @@
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Campus Shop</title>
-    <link rel="stylesheet" href="assets/styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Campus Shop: Rep your chapter and study in style. Simple demo store for campus gear." />
+  <title>Campus Shop</title>
+  <link rel="stylesheet" href="assets/styles.css" />
   </head>
   <body>
   <header class="container header">
@@ -76,8 +77,6 @@
   <button id="quickview-toggle" class="btn" aria-label="Quick view">👁️</button>
   <button id="coupon-toggle" class="btn" aria-label="Reveal coupon">🎟️</button>
 </div>
-
-<div id="toast-wrap" aria-live="polite" aria-atomic="true"></div>
 
 </body>
 </html>
