--- a/SHOP/public/index.html
+++ b/SHOP/public/index.html
@@ -27,6 +27,11 @@
 
 
 <section id="products" class="grid"></section>
+
+<section>
+  <h3>Recently Viewed</h3>
+  <div id="recently-viewed" style="display:flex;gap:4px;"></div>
+</section>
 </main>
 
 
