--- a/SHOP/public/index.html
+++ b/SHOP/public/index.html
@@ -1,87 +1,85 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Campus Shop: Rep your chapter and study in style. Simple demo store for campus gear." />
   <title>Campus Shop</title>
   <link rel="stylesheet" href="assets/styles.css" />
-  </head>
-  <body>
+</head>
+<body>
+  <!-- Header with navigation and theme toggle -->
   <header class="container header">
     <h1>Campus Shop</h1>
     <nav>
       <input id="search" class="search" type="search" placeholder="Search products…" aria-label="Search products">
-      <button id="theme-toggle" class="btn ghost" aria-label="Toggle theme">🔍</button>
+      <button id="theme-toggle" class="btn ghost" aria-label="Toggle theme">🌓</button>
       <a href="index.html" class="active">Store</a>
       <a href="cart.html">Cart (<span id="cart-count">0</span>)</a>
     </nav>
   </header>
 
+  <!-- Main content: hero, products, recently viewed -->
+  <main class="container">
+    <section class="hero">
+      <h2>Rep your chapter • Study in style</h2>
+      <p>Simple demo store (no real payments).</p>
+    </section>
+    <section id="products" class="grid"></section>
+    <section>
+      <h3>Recently Viewed</h3>
+      <div id="recently-viewed" style="display:flex;gap:4px;"></div>
+    </section>
+  </main>
 
+  <!-- Footer -->
+  <footer class="container footer">
+    <p>© <span id="year"></span> Campus Shop</p>
+  </footer>
 
-<main class="container">
-<section class="hero">
-<h2>Rep your chapter • Study in style</h2>
-<p>Simple demo store (no real payments).</p>
-</section>
+  <!-- Toast notifications -->
+  <div id="toast-wrap" aria-live="polite" aria-atomic="true"></div>
 
+  <!-- Theme panel -->
+  <div id="theme-panel">
+    <button id="light-theme" class="btn" aria-label="Light theme">☀️</button>
+    <button id="dark-theme" class="btn" aria-label="Dark theme">🌙</button>
+  </div>
 
-<section id="products" class="grid"></section>
-
-<section>
-  <h3>Recently Viewed</h3>
-  <div id="recently-viewed" style="display:flex;gap:4px;"></div>
-</section>
-</main>
-
-
-<footer class="container footer">
-<p>© <span id="year"></span> Campus Shop</p>
-</footer>
-
-
-<script src="assets/js/products.js"></script>
-<script src="assets/js/main.js"></script>
-
-<div id="toast-wrap" aria-live="polite" aria-atomic="true"></div>
-
-<!-- theme-panel -->
-<div id="theme-panel">
-  <button id="light-theme" class="btn" aria-label="Light theme">☀️</button>
-  <button id="dark-theme" class="btn" aria-label="Dark theme">🌙</button>
-</div>
-
-<!-- Quick View Modal -->
-<div id="quickview" class="modal">
-  <div class="modal-content">
-    <span class="close" aria-label="Close modal">&times;</span>
-    <h2>Product Details</h2>
-    <div id="quickview-image"></div>
-    <div id="quickview-info">
-      <h3 id="quickview-title"></h3>
-      <p id="quickview-description"></p>
-      <p id="quickview-price"></p>
-      <button id="quickview-add" class="btn">Add to Cart</button>
+  <!-- Quick View Modal -->
+  <div id="quickview" class="modal">
+    <div class="modal-content">
+      <span class="close" aria-label="Close modal">&times;</span>
+      <h2>Product Details</h2>
+      <div id="quickview-image"></div>
+      <div id="quickview-info">
+        <h3 id="quickview-title"></h3>
+        <p id="quickview-description"></p>
+        <p id="quickview-price"></p>
+        <button id="quickview-add" class="btn">Add to Cart</button>
+      </div>
     </div>
   </div>
-</div>
 
-<!-- Coupon Scratch-Card Modal -->
-<div id="coupon-modal" class="modal coupon">
-  <div class="modal-content">
-    <span class="close" aria-label="Close modal">&times;</span>
-    <h2>Scratch to Reveal Coupon</h2>
-    <div id="coupon-scratch" class="scratch-card">
-      <p>Scratch here to reveal your coupon code!</p>
+  <!-- Coupon Scratch-Card Modal -->
+  <div id="coupon-modal" class="modal coupon">
+    <div class="modal-content">
+      <span class="close" aria-label="Close modal">&times;</span>
+      <h2>Scratch to Reveal Coupon</h2>
+      <div id="coupon-scratch" class="scratch-card">
+        <p>Scratch here to reveal your coupon code!</p>
+      </div>
     </div>
   </div>
-</div>
 
-<!-- Controls that open panels -->
-<div id="floating-actions">
-  <button id="quickview-toggle" class="btn" aria-label="Quick view">👁️</button>
-  <button id="coupon-toggle" class="btn" aria-label="Reveal coupon">🎟️</button>
-</div>
+  <!-- Floating Actions -->
+  <div id="floating-actions">
+    <button id="quickview-toggle" class="btn" aria-label="Quick view">👁️</button>
+    <button id="coupon-toggle" class="btn" aria-label="Reveal coupon">🎟️</button>
+  </div>
 
+  <!-- Scripts -->
+  <script src="assets/js/products.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
