--- a/SHOP/public/index.html
+++ b/SHOP/public/index.html
@@ -17,7 +17,6 @@
     </div>
     <nav>
       <input id="search" class="search" type="search" placeholder="Search products…" aria-label="Search products">
-      <button id="theme-toggle" class="btn ghost" aria-label="Toggle theme">🌓</button>
       <a href="index.html" class="active">Store</a>
       <a href="cart.html">Cart (<span id="cart-count">0</span>)</a>
     </nav>
@@ -44,7 +43,19 @@
         </blockquote>
         <blockquote>
           <p>“Love the chapter tee. Super comfy!”</p>
-          <footer>– Jamie, Alumni</footer>
+          <footer>– Jamie, CSUN Alumni</footer>
+        </blockquote>
+        <blockquote>
+          <p>“The football hoodie is perfect for game day!”</p>
+          <footer>– Taylor, Ohio State University</footer>
+        </blockquote>
+        <blockquote>
+          <p>“Great fit and awesome colors. Go Blue!”</p>
+          <footer>– Jordan, University of Michigan</footer>
+        </blockquote>
+        <blockquote>
+          <p>“Best campus merch I’ve bought. Roll Tide!”</p>
+          <footer>– Casey, University of Alabama</footer>
         </blockquote>
       </div>
     </section>
@@ -94,6 +105,7 @@
         <h3 id="quickview-title"></h3>
         <p id="quickview-description"></p>
         <p id="quickview-price"></p>
+        <div id="quickview-size-wrap" style="margin: 12px 0;"></div>
         <button id="quickview-add" class="btn">Add to Cart</button>
       </div>
     </div>
