--- a/SHOP/public/index.html
+++ b/SHOP/public/index.html
@@ -36,28 +36,7 @@
     </section>
     <section class="testimonials container">
       <h3>What Students Say</h3>
-      <div class="testimonial-list">
-        <blockquote>
-          <p>“The quality is amazing and shipping was fast!”</p>
-          <footer>– Alex, CSUN Student</footer>
-        </blockquote>
-        <blockquote>
-          <p>“Love the chapter tee. Super comfy!”</p>
-          <footer>– Jamie, CSUN Alumni</footer>
-        </blockquote>
-        <blockquote>
-          <p>“The football hoodie is perfect for game day!”</p>
-          <footer>– Taylor, Ohio State University</footer>
-        </blockquote>
-        <blockquote>
-          <p>“Great fit and awesome colors. Go Blue!”</p>
-          <footer>– Jordan, University of Michigan</footer>
-        </blockquote>
-        <blockquote>
-          <p>“Best campus merch I’ve bought. Roll Tide!”</p>
-          <footer>– Casey, University of Alabama</footer>
-        </blockquote>
-      </div>
+      <div id="testimonial-carousel" class="testimonial-carousel"></div>
     </section>
     <section class="faq container">
       <h3>Frequently Asked Questions</h3>
