--- a/SHOP/public/index.html
+++ b/SHOP/public/index.html
@@ -19,6 +19,7 @@
       <input id="search" class="search" type="search" placeholder="Search products…" aria-label="Search products">
       <a href="index.html" class="active">Store</a>
       <a href="cart.html">Cart (<span id="cart-count">0</span>)</a>
+      <button id="theme-toggle" class="btn ghost" aria-label="Toggle theme">🌓</button>
     </nav>
   </header>
 
