--- a/SHOP/public/index.html
+++ b/SHOP/public/index.html
@@ -3,78 +3,84 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Campus Shop: Rep your chapter and study in style. Modern demo store for campus gear." />
-  <title>Campus Shop</title>
+  <title>Vintage College Shop</title>
   <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
   <header class="container header" role="banner">
-    <div class="logo" style="display:flex;align-items:center;gap:8px;">
-      <svg width="32" height="32" fill="none" viewBox="0 0 32 32"><rect width="32" height="32" rx="8" fill="#38bdf8"/><text x="16" y="22" text-anchor="middle" font-size="16" fill="#fff" font-family="Inter, sans-serif" font-weight="bold">CS</text></svg>
-      <span style="font-weight:700;font-size:1.5em;">Campus Shop</span>
+    <div class="logo">
+      <svg width="32" height="32" fill="none" viewBox="0 0 32 32" aria-hidden="true"><rect width="32" height="32" rx="8" fill="#45736C"/><text x="16" y="22" text-anchor="middle" font-size="16" fill="#fff" font-family="Inter, sans-serif" font-weight="bold">CS</text></svg>
+  <span class="logo-text">Vintage College Shop</span>
     </div>
-    <nav>
-      <a href="index.html" class="active" aria-current="page">Store</a>
-      <a href="cart.html">Cart (<span id="cart-count">0</span>)</a>
-      <button id="theme-toggle" class="btn ghost theme-toggle" aria-label="Toggle dark/light mode">
-        <span class="theme-icon" aria-hidden="true">🌙</span>
-        <span class="visually-hidden">Toggle theme</span>
-      </button>
-      <button class="nav-toggle" aria-label="Open navigation">☰</button>
+    <nav class="main-nav" aria-label="Main navigation">
+      <a href="index.html" class="nav-link active" aria-current="page">Store</a>
+      <a href="cart.html" class="nav-link">Cart</a>
+      <div class="nav-actions">
+        <div class="circle-btn search-btn" id="search-btn" tabindex="0" aria-label="Search">
+          <span class="search-icon" aria-hidden="true">&#128269;</span>
+          <input type="text" id="search-input" class="search-input" placeholder="Search..." aria-label="Search products" />
+        </div>
+        <button id="cart-icon" class="circle-btn cart-btn" aria-label="View cart">
+          🛒<span id="cart-count" class="cart-count">0</span>
+        </button>
+        <button id="theme-toggle" class="circle-btn theme-btn" aria-label="Toggle dark/light mode">
+          <span class="theme-icon" aria-hidden="true">🌙</span>
+        </button>
+      </div>
     </nav>
   </header>
 
   <main class="container" id="main-content">
-    <section class="hero">
-      <h1>Rep your chapter • Study in style</h1>
-      <p>Modern campus gear, accessible to all. <a href="#products" class="btn large-cta" style="margin-top:16px;">Shop Now</a></p>
-    </section>
+  <h1>Vintage College Shop</h1>
     <section id="products" class="grid" aria-label="Product list"></section>
-    <section class="testimonials container">
-      <h2>What Students Say</h2>
-      <div id="testimonial-carousel" class="testimonial-carousel"></div>
-    </section>
-    <section class="faq container">
-      <h2>Frequently Asked Questions</h2>
-      <details>
-        <summary>Is this a real store?</summary>
-        <p>No, this is a demo project for campus gear. No real payments are processed.</p>
-      </details>
-      <details>
-        <summary>How do I contact support?</summary>
-        <p>Email us at <a href="mailto:support@campusshop.com">support@campusshop.com</a>.</p>
-      </details>
-    </section>
-    <section class="contact container">
-      <h2>Contact Us</h2>
-      <form action="mailto:support@campusshop.com" method="POST" enctype="text/plain">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" placeholder="Your Message" required></textarea>
-        <button type="submit" class="btn">Send Message</button>
-      </form>
+
+    <section class="help-section" aria-labelledby="help-heading">
+      <h2 id="help-heading">Need Help?</h2>
+      <div class="help-flex">
+        <div class="faq" role="list" aria-label="Frequently Asked Questions">
+          <h3>FAQ</h3>
+          <details>
+            <summary>Is this a real store?</summary>
+            <p>No, this is a demo project for vintage college gear. No real payments are processed.</p>
+          </details>
+          <details>
+            <summary>How do I contact support?</summary>
+            <p>Email us at <a href="mailto:support@vintagecollegeshop.com">support@vintagecollegeshop.com</a>.</p>
+          </details>
+        </div>
+        <div class="contact" role="form" aria-labelledby="contact-heading">
+          <h3 id="contact-heading">Contact Us</h3>
+          <form id="contact-form" novalidate>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="Your Name" required autocomplete="name" />
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Your Email" required autocomplete="email" />
+            <label for="message">Message</label>
+            <textarea id="message" name="message" placeholder="Your Message" required rows="4"></textarea>
+            <button type="submit" class="btn">Send Message</button>
+            <div id="form-success" class="form-success" role="status" aria-live="polite"></div>
+          </form>
+        </div>
+      </div>
     </section>
   </main>
 
   <footer class="container footer" role="contentinfo">
-    <p>© <span id="year"></span> Campus Shop</p>
+    <nav class="footer-nav" aria-label="Footer navigation">
+      <a href="#" class="footer-link">About</a>
+      <span aria-hidden="true">•</span>
+      <a href="#" class="footer-link">Privacy</a>
+      <span aria-hidden="true">•</span>
+      <a href="#" class="footer-link">Terms</a>
+      <span aria-hidden="true">•</span>
+  <a href="mailto:support@vintagecollegeshop.com" class="footer-link">Contact</a>
+    </nav>
+  <p>© <span id="year"></span> Vintage College Shop</p>
   </footer>
 
-  <!-- Slide-out Cart Drawer -->
-  <div id="cart-drawer" class="cart-drawer" aria-label="Shopping cart" tabindex="-1">
-    <button class="close-cart" aria-label="Close cart">×</button>
-    <div id="cart-items"></div>
-    <div id="cart-summary"></div>
-  </div>
-  <button id="cart-icon" class="cart-icon" aria-label="Open cart">🛒<span id="cart-count-drawer">0</span></button>
-
-  <!-- Toast notifications -->
   <div id="toast-wrap" aria-live="polite" aria-atomic="true"></div>
-  <!-- Back to top button -->
-  <button id="back-to-top" class="btn ghost" aria-label="Back to top">↑</button>
-
   <script src="assets/js/products.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
