--- a/SHOP/public/product.html
+++ b/SHOP/public/product.html
@@ -3,108 +3,85 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Product Details - Campus Shop</title>
+  <title>Product Details – Vintage College Shop</title>
   <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
   <header class="container header" role="banner">
-    <div class="logo" style="display:flex;align-items:center;gap:8px;">
-      <svg width="32" height="32" fill="none" viewBox="0 0 32 32"><rect width="32" height="32" rx="8" fill="#38bdf8"/><text x="16" y="22" text-anchor="middle" font-size="16" fill="#fff" font-family="Inter, sans-serif" font-weight="bold">CS</text></svg>
-      <span style="font-weight:700;font-size:1.5em;">Campus Shop</span>
+    <div class="logo">
+      <svg width="32" height="32" fill="none" viewBox="0 0 32 32" aria-hidden="true"><rect width="32" height="32" rx="8" fill="#45736C"/><text x="16" y="22" text-anchor="middle" font-size="16" fill="#fff" font-family="Inter, sans-serif" font-weight="bold">CS</text></svg>
+  <span class="logo-text">Vintage College Shop</span>
     </div>
-    <nav>
-      <a href="index.html">Store</a>
-      <a href="cart.html">Cart (<span id="cart-count">0</span>)</a>
-      <button id="theme-toggle" class="btn ghost theme-toggle" aria-label="Toggle dark/light mode">
-        <span class="theme-icon" aria-hidden="true">🌙</span>
-        <span class="visually-hidden">Toggle theme</span>
-      </button>
-      <button class="nav-toggle" aria-label="Open navigation">☰</button>
+    <nav class="main-nav" aria-label="Main navigation">
+      <a href="index.html" class="nav-link">Store</a>
+      <a href="cart.html" class="nav-link">Cart</a>
+      <div class="nav-actions">
+        <div class="circle-btn search-btn" id="search-btn" tabindex="0" aria-label="Search">
+          <span class="search-icon" aria-hidden="true">&#128269;</span>
+          <input type="text" id="search-input" class="search-input" placeholder="Search..." aria-label="Search products" />
+        </div>
+        <button id="cart-icon" class="circle-btn cart-btn" aria-label="View cart">
+          🛒<span id="cart-count" class="cart-count">0</span>
+        </button>
+        <button id="theme-toggle" class="circle-btn theme-btn" aria-label="Toggle dark/light mode">
+          <span class="theme-icon" aria-hidden="true">🌙</span>
+        </button>
+      </div>
     </nav>
   </header>
+
   <main class="container" id="main-content">
-    <nav aria-label="Breadcrumb">
-      <a href="index.html" class="breadcrumb-link">← Back to Shop</a>
-    </nav>
-    <div id="product-details" class="product-detail-grid"></div>
-    <section id="recommendations" aria-label="You may also like"></section>
+    <section id="product-detail" aria-label="Product details"></section>
+
+    <section class="help-section" aria-labelledby="help-heading">
+      <h2 id="help-heading">Need Help?</h2>
+      <div class="help-flex">
+        <div class="faq" role="list" aria-label="Frequently Asked Questions">
+          <h3>FAQ</h3>
+          <details>
+            <summary>How do I add to cart?</summary>
+            <p>Select your options and click "Add to Cart".</p>
+          </details>
+          <details>
+            <summary>Can I checkout?</summary>
+            <p>This is a demo project. Checkout is not available.</p>
+          </details>
+        </div>
+        <div class="contact" role="form" aria-labelledby="contact-heading">
+          <h3 id="contact-heading">Contact Us</h3>
+          <form id="contact-form" novalidate>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="Your Name" required autocomplete="name" />
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Your Email" required autocomplete="email" />
+            <label for="message">Message</label>
+            <textarea id="message" name="message" placeholder="Your Message" required rows="4"></textarea>
+            <button type="submit" class="btn">Send Message</button>
+            <div id="form-success" class="form-success" role="status" aria-live="polite"></div>
+          </form>
+        </div>
+      </div>
+    </section>
   </main>
+
   <footer class="container footer" role="contentinfo">
-    <p>© <span id="year"></span> Campus Shop</p>
+    <nav class="footer-nav" aria-label="Footer navigation">
+      <a href="#" class="footer-link">About</a>
+      <span aria-hidden="true">•</span>
+      <a href="#" class="footer-link">Privacy</a>
+      <span aria-hidden="true">•</span>
+      <a href="#" class="footer-link">Terms</a>
+      <span aria-hidden="true">•</span>
+  <a href="mailto:support@vintagecollegeshop.com" class="footer-link">Contact</a>
+    </nav>
+  <p>© <span id="year"></span> Vintage College Shop</p>
   </footer>
+
   <div id="toast-wrap" aria-live="polite" aria-atomic="true"></div>
   <script src="assets/js/products.js"></script>
+  <script src="assets/js/product.js"></script>
   <script src="assets/js/main.js"></script>
-  <script>
-    // Product page logic
-    const params = new URLSearchParams(window.location.search);
-    const productId = params.get('id');
-    const product = window.CATALOG.find(p => p.id === productId);
-    const details = document.getElementById('product-details');
-    if (product) {
-      details.innerHTML = `
-        <div class="product-images">
-          ${(product.imgs || [product.img]).map(src => `<img src="${src}" alt="${product.name}" class="detail-img" />`).join('')}
-        </div>
-        <div class="product-info">
-          <h1>${product.name}</h1>
-          <p class="product-desc">${product.desc || ''}</p>
-          <div class="options">
-            <label for="product-size">Size:</label>
-            <select id="product-size">${(product.sizes||['S','M','L','XL','XXL','XXXL']).map(s=>`<option value="${s}">${s}</option>`).join('')}</select>
-          </div>
-          <div class="options">
-            <label for="product-color">Color:</label>
-            <select id="product-color">${(product.colors||['Default']).map(c=>`<option value="${c}">${c}</option>`).join('')}</select>
-          </div>
-          <div class="cta-row">
-            <button id="add-to-cart" class="btn large-cta" aria-label="Add ${product.name} to cart">Add to Cart</button>
-            <button id="share-btn" class="btn ghost" aria-label="Share product">🔗<span class="visually-hidden">Share</span></button>
-          </div>
-          <div id="add-feedback"></div>
-        </div>
-      `;
-      document.getElementById('add-to-cart').onclick = function() {
-        const size = document.getElementById('product-size').value;
-        const color = document.getElementById('product-color').value;
-        const cart = JSON.parse(localStorage.getItem('cart') || '{}');
-        const key = `${product.id}_${size}_${color}`;
-        cart[key] = (cart[key] || 0) + 1;
-        localStorage.setItem('cart', JSON.stringify(cart));
-        document.getElementById('cart-count').textContent = Object.values(cart).reduce((a, b) => a + b, 0);
-        showAddFeedback();
-      };
-      function showAddFeedback() {
-        const feedback = document.getElementById('add-feedback');
-        feedback.innerHTML = `<span class="icon-check">✔️</span> Added to cart!`;
-        feedback.classList.add('show');
-        setTimeout(()=>feedback.classList.remove('show'), 1500);
-      }
-      document.getElementById('share-btn').onclick = () => {
-        navigator.clipboard.writeText(window.location.href);
-        alert('Product link copied!');
-      };
-    } else {
-      details.innerHTML = '<p>Product not found.</p>';
-    }
-    // Recommendations
-    const recs = window.CATALOG.filter(p => p.id !== productId).slice(0,3);
-    document.getElementById('recommendations').innerHTML = `
-      <h2>You may also like</h2>
-      <div class="grid">
-        ${recs.map(p=>`
-          <div class="product-card">
-            <a href="product.html?id=${p.id}" aria-label="View details for ${p.name}">
-              <img src="${p.img}" alt="${p.name}" />
-              <h3>${p.name}</h3>
-            </a>
-          </div>
-        `).join('')}
-      </div>
-    `;
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
 </body>
 </html>
