--- a/SHOP/public/cart.html
+++ b/SHOP/public/cart.html
@@ -19,14 +19,15 @@
       <a href="cart.html" class="nav-link active" aria-current="page">Cart</a>
       <div class="nav-actions">
         <div class="circle-btn search-btn" id="search-btn" tabindex="0" aria-label="Search">
-          <span class="search-icon" aria-hidden="true">&#128269;</span>
+          <img src="assets/icons/search.png" class="search-icon" aria-hidden="true" alt="Search" style="width:1.2em;height:1.2em;vertical-align:middle;" />
           <input type="text" id="search-input" class="search-input" placeholder="Search..." aria-label="Search products" />
         </div>
         <button id="cart-icon" class="circle-btn cart-btn" aria-label="View cart">
-          🛒<span id="cart-count" class="cart-count">0</span>
+          <img src="assets/icons/cart.png" alt="Cart" style="width:1.2em;height:1.2em;vertical-align:middle;" /><span id="cart-count" class="cart-count">0</span>
         </button>
         <button id="theme-toggle" class="circle-btn theme-btn" aria-label="Toggle dark/light mode">
-          <span class="theme-icon" aria-hidden="true">🌙</span>
+          <img src="assets/icons/dark-theme.png" class="theme-icon" aria-hidden="true" alt="Dark Theme" style="width:1.2em;height:1.2em;vertical-align:middle;display:none;" />
+          <img src="assets/icons/light theme.png" class="theme-icon" aria-hidden="true" alt="Light Theme" style="width:1.2em;height:1.2em;vertical-align:middle;display:none;" />
         </button>
       </div>
     </nav>
