--- a/SHOP/public/index.html
+++ b/SHOP/public/index.html
@@ -11,29 +11,29 @@
 <body>
   <header class="container header" role="banner">
     <div class="logo">
-      <svg width="32" height="32" fill="none" viewBox="0 0 32 32" aria-hidden="true"><rect width="32" height="32" rx="8" fill="#45736C"/><text x="16" y="22" text-anchor="middle" font-size="16" fill="#fff" font-family="Inter, sans-serif" font-weight="bold">CS</text></svg>
-  <span class="logo-text">Vintage College Shop</span>
+      <img src="assets/icons/logo.png" alt="Vintage College Shop Logo" style="height:64px;width:auto;" />
+      <span class="logo-text">Vintage College Shop</span>
     </div>
     <nav class="main-nav" aria-label="Main navigation">
       <a href="index.html" class="nav-link active" aria-current="page">Store</a>
-      <a href="cart.html" class="nav-link">Cart</a>
+  <!-- Cart link removed -->
       <div class="nav-actions">
         <div class="circle-btn search-btn" id="search-btn" tabindex="0" aria-label="Search">
-          <span class="search-icon" aria-hidden="true">&#128269;</span>
+          <img src="assets/icons/search.png" class="search-icon" aria-hidden="true" alt="Search" style="width:1.2em;height:1.2em;vertical-align:middle;" />
           <input type="text" id="search-input" class="search-input" placeholder="Search..." aria-label="Search products" />
         </div>
-        <button id="cart-icon" class="circle-btn cart-btn" aria-label="View cart">
-          🛒<span id="cart-count" class="cart-count">0</span>
-        </button>
+        <a href="cart.html" id="cart-icon" class="circle-btn cart-btn" aria-label="View cart">
+          <img src="assets/icons/cart.png" alt="Cart" style="width:1.2em;height:1.2em;vertical-align:middle;" /><span id="cart-count" class="cart-count">0</span>
+        </a>
         <button id="theme-toggle" class="circle-btn theme-btn" aria-label="Toggle dark/light mode">
-          <span class="theme-icon" aria-hidden="true">🌙</span>
+          <img src="assets/icons/dark-theme.png" class="theme-icon" aria-hidden="true" alt="Dark Theme" style="width:1.2em;height:1.2em;vertical-align:middle;display:none;" />
+          <img src="assets/icons/light theme.png" class="theme-icon" aria-hidden="true" alt="Light Theme" style="width:1.2em;height:1.2em;vertical-align:middle;display:none;" />
         </button>
       </div>
     </nav>
   </header>
 
   <main class="container" id="main-content">
-  <h1>Vintage College Shop</h1>
     <section id="products" class="grid" aria-label="Product list"></section>
 
     <section class="help-section" aria-labelledby="help-heading">
