--- a/SHOP/public/index.html
+++ b/SHOP/public/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="container header" role="banner">
     <div class="logo">
-      <img src="assets/icons/logo.png" alt="Vintage College Shop Logo" style="height:64px;width:auto;" />
+      <img src="assets/icons/logo.png" alt="Vintage College Shop Logo" style="height: 64px;width:auto;" />
       <span class="logo-text">Vintage College Shop</span>
     </div>
     <nav class="main-nav" aria-label="Main navigation">
@@ -75,7 +75,7 @@
       <span aria-hidden="true">•</span>
       <a href="#" class="footer-link">Terms</a>
       <span aria-hidden="true">•</span>
-  <a href="mailto:support@vintagecollegeshop.com" class="footer-link">Contact</a>
+  <a href="mailto:kuirbg@gmail.com" class="footer-link">Contact</a>
     </nav>
   <p>© <span id="year"></span> Vintage College Shop</p>
   </footer>
